More keybinds and pytest

--- a/config.org
+++ b/config.org
@@ -449,6 +449,11 @@ A keybinding framework to set keybindings easily. Uses https://github.com/noctui
     "w -" '(evil-window-split :wk "Vertical Split")
     "w d" '(evil-window-delete :wk "Close window")
     )
+
+  (start/leader-keys
+	"x" '(:ignore t :wk "Cleanup?")
+	"x d w" '(delete-trailing-whitespace :wk "Delete trailing whitespace")
+	)
   )
             #+end_src
 
