require org-protocol

--- a/config.org
+++ b/config.org
@@ -1917,6 +1917,7 @@ Org-Agenda
 
    ;; This seems to work for protocol setup: http://www.mediaonfire.com/blog/2017_07_21_org_protocol_firefox.html
    ;; Capture templates for: TODO tasks, Notes, appointments, phone calls, meetings, and org-protocol
+   (require 'org-protocol)
    (setq org-capture-templates
          (quote (("t" "todo (clock)" entry (file cadair-capture-file)
                   "* TODO %i%?\n" :clock-in t :clock-resume t)
