keybind for eglot rename symbol

--- a/config.org
+++ b/config.org
@@ -274,6 +274,7 @@ A keybinding framework to set keybindings easily. Uses https://github.com/noctui
     "c l"   '(evilnc-comment-or-uncomment-lines :wk "Toggle Comments")
     "c L"   '(evilnc-toggle-comment-empty-lines :wk "Toggle commenting empty lines")
 	"c o"   '(symbols-outline-show :wk "Show symbols outline")
+	"c r"   '(eglot-rename :wk "Rename symbol at point")
 	"c s"   '(consult-eglot-symbols :wk "Find Symbols in Workspace")
     )
 
