--- a/config.org
+++ b/config.org
@@ -482,6 +482,7 @@ A keybinding framework to set keybindings easily. Uses https://github.com/noctui
   (confirm-kill-emacs 'y-or-n-p)
 
   (tab-width 4)
+  (setq-default 'truncate-lines t)
 
   (make-backup-files nil) ;; Stop creating ~ backup files
   (auto-save-default nil) ;; Stop creating # auto save files
