--- a/config.org
+++ b/config.org
@@ -855,7 +855,10 @@ A template system for Emacs. And yasnippet-snippets is a snippet collection pack
 To use it write out the full keyword (or use autocompletion) and press Tab.
 #+begin_src emacs-lisp
 (use-package yasnippet-snippets
-  :hook (prog-mode . yas-minor-mode)
+  :hook
+  (prog-mode . yas-minor-mode)
+  (rst-mode . yas-minor-mode)
+  (markdown-mode . yas-minor-mode)
   :custom
   (yas-snippet-dirs
    '("~/.emacs.d/snippets"                 ;; writeable snippets dir
