Add a ruff-check command

--- a/config.org
+++ b/config.org
@@ -906,7 +906,7 @@ Enable the excellent pytest package, and setup an extra hook for [[https://githu
   (transient-append-suffix 'python-pytest-dispatch
     '(-2)
     ["Extra Options"
-     ("--rd" "Remote data" "--remote-data=any")
+     ("-r" "Remote data (any)" "--remote-data=any")
      ("-c" "Coverage" "--cov --cov-report=term-missing")
 	 ]
     )
@@ -942,9 +942,16 @@ Finally, setup the flymake-ruff package, currently my own fork of it where I am 
 **** Reformatting
 
      #+begin_src emacs-lisp
-(use-package python-isort)
-(use-package ruff-format)
-(use-package python-black)
+     (use-package python-isort)
+     (use-package ruff-format)
+     (use-package python-black)
+     (use-package reformatter)
+
+     ;; Define a formatter which runs ruff check --fix
+     (reformatter-define ruff-check
+       :program ruff-format-command
+       :args (list "check" "--fix" "--unsafe-fixes" "--stdin-filename" (or (buffer-file-name) input-file))
+       :lighter " RuffCheck")
      #+end_src
 
 **** Custom Functions
@@ -1103,6 +1110,7 @@ A bunch of language specific key binds, using ~,~ as the leader key.
   "f i" 'python-isort-buffer
   "f b" 'python-black-buffer
   "f r" 'ruff-format-buffer
+  "f c" 'ruff-check-buffer
 
   "m a" 'micromamba-activate
   "m d" 'micromamba-deactivate
