--- a/config.org
+++ b/config.org
@@ -572,7 +572,11 @@ We use Nerd icons because it has more, better icons and all-the-icons only suppo
 While nerd-icons supports both GUI and TUI.
 #+begin_src emacs-lisp
 (use-package nerd-icons
-  :if (display-graphic-p))
+  :if (display-graphic-p)
+  :demand t
+  :custom
+  (nerd-icons-font-family "Fira Code Nerd Font")
+  )
 
 (use-package nerd-icons-dired
   :hook (dired-mode . (lambda () (nerd-icons-dired-mode t))))
@@ -607,11 +611,59 @@ https://github.com/zonuexe/emacs-presentation-mode?tab=readme-ov-file
 
 ** Breadcrumbs at the top
 #+begin_src emacs-lisp
+;; (use-package breadcrumb
+  ;; :custom-face
+  ;; (breadcrumb-face ((t (:inherit header-line))))
+;;   )
 (use-package breadcrumb
+  :hook
+  (prog-mode . breadcrumb-local-mode)
   :custom-face
   (breadcrumb-face ((t (:inherit header-line))))
-  )
+  :custom
+  ;; Add nerd-icons to breadcrumb
+  (breadcrumb-imenu-crumb-separator
+   (concat " "(nerd-icons-faicon "nf-fa-chevron_right") " "))
+  (breadcrumb-project-crumb-separator
+   (concat " "(nerd-icons-faicon "nf-fa-chevron_right") " "))
+  (breadcrumb-imenu-max-length 0.5)
+  (breadcrumb-project-max-length 0.5)
+  :preface
+  ;; Add icons to breadcrumb
+  (advice-add #'breadcrumb--format-project-node :around
+              (lambda (og p more &rest r)
+                "Icon For File"
+                (let ((string (apply og p more r)))
+                  (if (not more)
+                      (concat (nerd-icons-icon-for-file string)
+                              " " string)
+                    (concat (nerd-icons-faicon
+                             "nf-fa-folder_open"
+                             :face 'breadcrumb-project-crumbs-face)
+                            " "
+                            string)))))
+
+  (advice-add #'breadcrumb--format-ipath-node :around
+              (lambda (og p more &rest r)
+                "Icon for items"
+                (let ((string (apply og p more r)))
+                  (if (not more)
+                      (concat (nerd-icons-codicon
+                               "nf-cod-symbol_field"
+                               :face 'breadcrumb-imenu-leaf-face)
+                              " " string)
+                    (cond ((string= string "Packages")
+                           (concat (nerd-icons-codicon "nf-cod-package" :face 'breadcrumb-imenu-crumbs-face) " " string))
+                          ((string= string "Requires")
+                           (concat (nerd-icons-codicon "nf-cod-file_submodule" :face 'breadcrumb-imenu-crumbs-face) " " string))
+                          ((or (string= string "Variable") (string= string "Variables"))
+                           (concat (nerd-icons-codicon "nf-cod-symbol_variable" :face 'breadcrumb-imenu-crumbs-face) " " string))
+                          ((string= string "Function")
+                           (concat (nerd-icons-codicon "nf-cod-symbol_field" :face 'breadcrumb-imenu-crumbs-face) " " string))
+                          (t string)))))))
 #+end_src
+
+
 * Helper functions
 Many of these are lifted from doom.
 ** File management
