more breadcrub stuff

--- a/config.org
+++ b/config.org
@@ -618,9 +618,12 @@ https://github.com/zonuexe/emacs-presentation-mode?tab=readme-ov-file
 (use-package breadcrumb
   :hook
   (prog-mode . breadcrumb-local-mode)
+  (org-mode . breadcrumb-local-mode)
   :custom-face
-  (breadcrumb-face ((t (:inherit header-line))))
+  (breadcrumb-face ((t (:inherit header-line :foreground "dark-gray"))))
   :custom
+  ;; This doesn't work as breadcrumb get's prepended
+  ;; (header-line-format `("" header-line-indent))
   ;; Add nerd-icons to breadcrumb
   (breadcrumb-imenu-crumb-separator
    (concat " "(nerd-icons-faicon "nf-fa-chevron_right") " "))
