--- a/config.org
+++ b/config.org
@@ -35,6 +35,7 @@ The repo is also a flake, so if you are mad enough to want to use this you can i
 - [[#good-defaults][Good Defaults]]
   - [[#ediff][EDiff]]
   - [[#nix-environment-hackery][nix environment hackery]]
+  - [[#window-management][Window management]]
 - [[#appearance][Appearance]]
   - [[#set-theme][Set Theme]]
   - [[#transparency][Transparency]]
@@ -451,6 +452,7 @@ A keybinding framework to set keybindings easily. Uses https://github.com/noctui
     "w /" '(evil-window-vsplit :wk "Vertical Split")
     "w -" '(evil-window-split :wk "Vertical Split")
     "w d" '(evil-window-delete :wk "Close window")
+    "w D" '(toggle-window-dedicated :wk "Dedicate window to buffer")
     )
 
   (start/leader-keys
@@ -523,6 +525,31 @@ A keybinding framework to set keybindings easily. Uses https://github.com/noctui
 ;;(setq exec-path (append exec-path '("/run/current-system/sw/bin/")))
 ;;(setq exec-path (append exec-path '("/home/stuart/.nix-profile/bin/")))
    #+end_src
+
+** Window management
+
+Tweaks and customisations to emacs' window management.
+
+This is based off reading this tutorial: https://www.masteringemacs.org/article/demystifying-emacs-window-manager
+
+#+begin_src emacs-lisp
+;; Make manual buffer commands obey the rules
+(setq switch-to-buffer-obey-display-actions t)
+#+end_src
+
+*** Dedicated Windows
+
+#+begin_src emacs-lisp
+;; If you try and open a new buffer in a dediated window put it somewhere else
+(setq switch-to-buffer-in-dedicated-window "pop")
+
+;; an interactive function for setting a buffer as dediated
+(defun toggle-window-dedication ()
+  "Toggles window dedication in the selected window."
+  (interactive)
+  (set-window-dedicated-p (selected-window)
+     (not (window-dedicated-p (selected-window)))))
+#+end_src
 * Appearance
 ** Set Theme
 My themes and fonts are set in my home-manager config so that they match the whole system.
@@ -665,7 +692,6 @@ https://github.com/zonuexe/emacs-presentation-mode?tab=readme-ov-file
                            (concat (nerd-icons-codicon "nf-cod-symbol_field" :face 'breadcrumb-imenu-crumbs-face) " " string))
                           (t string)))))))
 #+end_src
-
 
 * Helper functions
 Many of these are lifted from doom.
@@ -1057,20 +1083,16 @@ Custom written functions for Python related stuff
 
 (defun +python-executable-find (exe)
   "Resolve the path to the EXE executable.
-    Tries to be aware of your active conda/pipenv/virtualenv environment, before
-    falling back on searching your PATH."
+Tries to be aware of your active conda/pipenv/virtualenv environment, before
+falling back on searching your PATH."
   (if (file-name-absolute-p exe)
-      (and (file-executable-p exe)
-           exe)
+      (and (file-executable-p exe) exe)
     (let ((exe-root (format "bin/%s" exe)))
-      (cond ((when python-shell-virtualenv-root
+	  ;; micromamba sets python-shell-virtualenv-root as well
+      (or (and python-shell-virtualenv-root
                (let ((bin (expand-file-name exe-root python-shell-virtualenv-root)))
-                 (if (file-exists-p bin) bin))))
-            ((when (require 'conda nil t)
-               (let ((bin (expand-file-name (concat conda-env-current-name "/" exe-root)
-                                            (conda-env-default-location))))
-                 (if (file-executable-p bin) bin))))
-            ((executable-find exe))))))
+                 (and (file-exists-p bin) bin)))
+          (executable-find exe)))))
 
 (defun +python/open-repl ()
   "Open the Python REPL."
@@ -1092,6 +1114,9 @@ Custom written functions for Python related stuff
             (run-python nil dedicated t))
         (run-python nil dedicated t))))))
 
+(defvar +python-ipython-command '("ipython" "-i" "--simple-prompt" "--no-color-info")
+  "Command to initialize the ipython REPL for `+python/open-ipython-repl'.")
+
 (defun +python/open-ipython-repl ()
   "Open an IPython REPL."
   (interactive)
@@ -1103,15 +1128,13 @@ Custom written functions for Python related stuff
          (string-join (cdr +python-ipython-command) " ")))
     (+python/open-repl)))
 
-(defvar +python-ipython-command '("ipython" "-i" "--simple-prompt" "--no-color-info")
-  "Command to initialize the ipython REPL for `+python/open-ipython-repl'.")
-
 (defun cadair/run-restart-repl ()
   "Run a new python repl in a window which does not have focus."
   (interactive)
   (setq initial-buffer (current-buffer))
   (if (python-shell-get-buffer)
-      (kill-buffer (python-shell-get-buffer)))
+      (kill-process (get-buffer-process (python-shell-get-buffer))))
+  (sleep-for 0.5)
   (+python/open-ipython-repl)
   (evil-normal-state)
   (pop-to-buffer initial-buffer)
@@ -1188,6 +1211,7 @@ A bunch of language specific key binds, using ~,~ as the leader key.
 (add-to-list 'auto-mode-alist '("\\.yml\\'" . yaml-ts-mode))
 (add-to-list 'auto-mode-alist '("\\.yaml\\'" . yaml-ts-mode))
 #+end_src
+
 * Other Packages
 All the package setups that don't need much tweaking.
 
