never ending breadcrumb fonts

--- a/config.org
+++ b/config.org
@@ -647,7 +647,7 @@ https://github.com/zonuexe/emacs-presentation-mode?tab=readme-ov-file
   (prog-mode . breadcrumb-local-mode)
   (org-mode . breadcrumb-local-mode)
   :custom-face
-  (breadcrumb-face ((t (:inherit header-line :foreground "dark-gray"))))
+  (breadcrumb-face ((t (:inherit mode-line))))
   :custom
   ;; This doesn't work as breadcrumb get's prepended
   ;; (header-line-format `("" header-line-indent))
