more org tweaks

--- a/config.org
+++ b/config.org
@@ -2087,7 +2087,7 @@ Org-Agenda
    ;; this helps vertico work properly
    (setq org-refile-use-outline-path 'file)
 
-   (setq org-outline-path-complete-in-steps t)
+   (setq org-outline-path-complete-in-steps nil)
 
    ; Allow refile to create parent tasks with confirmation
    (setq org-refile-allow-creating-parent-nodes (quote confirm))
