Always scroll to bottom in python shell

--- a/config.org
+++ b/config.org
@@ -1172,6 +1172,10 @@ falling back on searching your PATH."
       (with-current-buffer (get-buffer "*compilation*")
         (inferior-python-mode)))))
 
+;; Always scroll to the end in a python shell
+(add-hook 'inferior-python-mode-hook
+          (lambda ()
+            (setq comint-move-point-for-output t)))
 #+end_src
 
 **** Keybindings
