use up and down for shell

--- a/config.org
+++ b/config.org
@@ -207,6 +207,16 @@ A keybinding framework to set keybindings easily. Uses https://github.com/noctui
    "J" 'scroll-up-command
    )
 
+  ;; Mode Specific Keybinds
+  ;; Shell
+  (general-define-key
+   :states 'insert
+   :keymaps 'comint-mode-map
+
+   "<up>" 'comint-previous-input
+   "<down>" 'comint-next-input
+  )
+
   ;; Set up a local-leader used for language mode specific functionality
   (general-create-definer my-local-leader
     :prefix ","
