--- a/config.org
+++ b/config.org
@@ -107,7 +107,7 @@ automatically exports the configuration here to the associated output files.
 (defun start/org-babel-tangle-config ()
   "Automatically tangle our Emacs.org config file when we save it. Credit to Emacs From Scratch for this one!"
   (when (string-equal (file-name-directory (buffer-file-name))
-                      (expand-file-name "~/Git/new.emacs.d/"))
+                      (expand-file-name "~/oss-projects/stumacs/"))
     ;; Dynamic scoping to the rescue
     (let ((org-confirm-babel-evaluate nil))
       (org-babel-tangle))))
@@ -569,9 +569,10 @@ This is based off reading this tutorial: https://www.masteringemacs.org/article/
 My themes and fonts are set in my home-manager config so that they match the whole system.
 
 #+begin_src emacs-lisp
-;;  (use-package gruvbox-theme
-;;    :config
-;;    (load-theme 'gruvbox-dark-medium t)) ;; We need to add t to trust this package
+ (use-package monokai-theme
+  :config
+  (load-theme 'monokai t)
+)
 #+end_src
 
 ** Transparency
